--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "google-auth-library": "^7.1.0",
+    "google-auth-library": "^7.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "morgan": "^1.10.0",
     "nocache": "^3.0.0",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.1",
     "twilio": "^3.63.0"
   },
@@ -34,6 +35,7 @@
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.6.0",
+    "@types/node-fetch": "^2.5.11",
     "@types/nodemailer": "^6.4.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
